add: add april-food-client add: add openFeign basic feature.

--- a/april-food-server/pom.xml
+++ b/april-food-server/pom.xml
@@ -53,6 +53,13 @@
             </exclusions>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.learn.cluod</groupId>
+            <artifactId>april-food-client</artifactId>
+        </dependency>
+
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
