--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>april-food-server</module>
+        <module>april-food-client</module>
+        <module>april-user-server</module>
     </modules>
     <name>april</name>
     <description>一个简单的微服务商品管理系统</description>
@@ -19,6 +21,8 @@
         <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
         <spring-cloud-alibaba.version>2.2.2.RELEASE</spring-cloud-alibaba.version>
         <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+
+        <april-food-client.version>1.0-SNAPSHOT</april-food-client.version>
     </properties>
 
     <dependencies>
@@ -67,20 +71,20 @@
                 <scope>import</scope>
             </dependency>
 
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-actuator</artifactId>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-starter-actuator</artifactId>-->
+            <!--            </dependency>-->
 
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-validation</artifactId>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-starter-validation</artifactId>-->
+            <!--            </dependency>-->
 
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter-web</artifactId>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-starter-web</artifactId>-->
+            <!--            </dependency>-->
 
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -88,15 +92,15 @@
                 <version>1.2.72</version>
             </dependency>
 
-<!--            <dependency>-->
-<!--                <groupId>com.alibaba.cloud</groupId>-->
-<!--                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.alibaba.cloud</groupId>-->
+            <!--                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
+            <!--            </dependency>-->
 
-<!--            <dependency>-->
-<!--                <groupId>com.alibaba.cloud</groupId>-->
-<!--                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.alibaba.cloud</groupId>-->
+            <!--                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
+            <!--            </dependency>-->
 
             <dependency>
                 <groupId>com.aliyun</groupId>
@@ -116,41 +120,47 @@
                 <version>3.1</version>
             </dependency>
 
-<!--&lt;!&ndash;            <dependency>&ndash;&gt;-->
-<!--&lt;!&ndash;                <groupId>org.mybatis.spring.boot</groupId>&ndash;&gt;-->
-<!--&lt;!&ndash;                <artifactId>mybatis-spring-boot-starter</artifactId>&ndash;&gt;-->
-<!--&lt;!&ndash;                <version>2.1.3</version>&ndash;&gt;-->
-<!--&lt;!&ndash;            </dependency>&ndash;&gt;-->
+            <!--&lt;!&ndash;            <dependency>&ndash;&gt;-->
+            <!--&lt;!&ndash;                <groupId>org.mybatis.spring.boot</groupId>&ndash;&gt;-->
+            <!--&lt;!&ndash;                <artifactId>mybatis-spring-boot-starter</artifactId>&ndash;&gt;-->
+            <!--&lt;!&ndash;                <version>2.1.3</version>&ndash;&gt;-->
+            <!--&lt;!&ndash;            </dependency>&ndash;&gt;-->
 
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.cloud</groupId>-->
-<!--                <artifactId>spring-cloud-starter-gateway</artifactId>-->
-<!--            </dependency>-->
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.cloud</groupId>-->
-<!--                <artifactId>spring-cloud-starter-openfeign</artifactId>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.cloud</groupId>-->
+            <!--                <artifactId>spring-cloud-starter-gateway</artifactId>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.cloud</groupId>-->
+            <!--                <artifactId>spring-cloud-starter-openfeign</artifactId>-->
+            <!--            </dependency>-->
 
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-devtools</artifactId>-->
-<!--                <scope>runtime</scope>-->
-<!--                <optional>true</optional>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-devtools</artifactId>-->
+            <!--                <scope>runtime</scope>-->
+            <!--                <optional>true</optional>-->
+            <!--            </dependency>-->
 
-<!--            <dependency>-->
-<!--                <groupId>com.taobao.arthas</groupId>-->
-<!--                <artifactId>arthas-spring-boot-starter</artifactId>-->
-<!--                <version>3.4.3</version>-->
-<!--                <scope>runtime</scope>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.taobao.arthas</groupId>-->
+            <!--                <artifactId>arthas-spring-boot-starter</artifactId>-->
+            <!--                <version>3.4.3</version>-->
+            <!--                <scope>runtime</scope>-->
+            <!--            </dependency>-->
 
-<!--            <dependency>-->
-<!--                <groupId>mysql</groupId>-->
-<!--                <artifactId>mysql-connector-java</artifactId>-->
-<!--                <scope>runtime</scope>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>mysql</groupId>-->
+            <!--                <artifactId>mysql-connector-java</artifactId>-->
+            <!--                <scope>runtime</scope>-->
+            <!--            </dependency>-->
 
+
+            <dependency>
+                <groupId>com.learn.cluod</groupId>
+                <artifactId>april-food-client</artifactId>
+                <version>${april-food-client.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
